--- a/bioit.ipynb
+++ b/bioit.ipynb
@@ -23,13 +23,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In this notebook, you may choose your own antibody framework and target protein structure, and design novel antibody binders. This workflow has been shown to generate weak antibody binders in the μM to nM range, with up to ~5-10% experimental success rates for some degree of binding.\n",
+    "\n",
+    "---\n",
+    "\n",
     "Antibody therapeutics represent a substantial market (approximately $550M USD) with tremendous potential for treating various diseases. Traditional approaches to antibody discovery are slow and laborious, typically involving immunizing mice or screening random libraries. \n",
     "\n",
-    "This notebook implements the RFantibody pipeline for structure-based design of de novo antibodies against a chosen target. It consists of three methods:\n",
+    "This notebook implements the RFantibody pipeline for structure-based design of de novo antibodies against a chosen target.\n",
     "\n",
-    "1. **Design of an antibody backbone targeting a protein of interest** - using an antibody-finetuned version of RFdiffusion ([Nature paper](https://www.nature.com/articles/s41586-023-06415-8))\n",
-    "2. **Generation of the CDR loop residues** - using ProteinMPNN ([Science paper](https://www.science.org/doi/10.1126/science.add2187))\n",
-    "3. **Structure prediction of the generated sequences with filtering for 'self-consistency'** - using an antibody-finetuned version of RoseTTAFold2 ([Preprint](https://www.biorxiv.org/content/10.1101/2023.05.24.542179v1)), shown to correlate with experimental success rates.\n",
+    "It takes two inputs:\n",
+    "- i) An input antibody framework (e.g. hu-4D5-8_Fv.pdb - a humanized single-domain antibody already approved in two FDA therapies)\n",
+    "- ii) A target protein of interest (e.g. respiratory syncytial virus (RSV) protein) with binding site (epitope residues)\n",
+    "\n",
+    "And runs the following three methods:\n",
+    "1. **De novo design of an antibody backbone targeting a protein of interest** - using an antibody-finetuned version of RFdiffusion ([Nature paper](https://www.nature.com/articles/s41586-023-06415-8))\n",
+    "2. **Design of the CDR loop residues** - using ProteinMPNN ([Science paper](https://www.science.org/doi/10.1126/science.add2187))\n",
+    "3. **Filtering designs on predicted structure 'self-consistency'** - using an antibody-finetuned version of RoseTTAFold2 ([Preprint](https://www.biorxiv.org/content/10.1101/2023.05.24.542179v1)), shown to correlate with significantly improved experimental success rates.\n",
     "\n",
     "The RFantibody pipeline itself is described in detail in [this preprint](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2).\n",
     "\n",
@@ -39,12 +48,10 @@
     "- Focuses on designing antibody CDR loops (main residues determining binding)\n",
     "- Designs may be filtered by \"self-cosistency\" of predicted structures, correlating with experimental success rates\n",
     "\n",
-    "Limitations:\n",
+    "Current limitations:\n",
     "- Generated antibodies at best tend to be weak binders (low binding affinities in μM to nM range)\n",
     "- Often low experimental success rates (~5-10% for some degree of binding) - heavily dependent on filtering\n",
-    "- No screening for e.g. human immunogenicity\n",
-    "\n",
-    "In this notebook, we'll use a humanized VHH framework (hu-4D5-8_Fv.pdb) to design antibodies targeting a specific site on respiratory syncytial virus (RSV) protein (rsv_site3.pdb)."
+    "- No screening for e.g. human immunogenicity"
    ]
   },
   {
@@ -112,6 +119,7 @@
     "\n",
     "1. **framework_pdb**: `hu-4D5-8_Fv.pdb` - Our humanized single domain antibody (VHH) framework\n",
     "2. **target_pdb**: `rsv_site3.pdb` - The target protein (RSV site 3) of interest\n",
+    "3. List of hotspot residues defining our epitope (target binding site)\n",
     "\n",
     "You may also choose your own antibody framework and target PDB, prepared with this script:\n",
     "https://github.com/RosettaCommons/RFantibody?tab=readme-ov-file#input-preparation\n",
@@ -138,6 +146,7 @@
     "import os\n",
     "framework_pdb = \"hu-4D5-8_Fv.pdb\"\n",
     "target_pdb = \"rsv_site3.pdb\"\n",
+    "hotspot_res = \"[T305,T456]\"\n",
     "print(f\"Framework PDB exists: {os.path.exists(framework_pdb)}\")\n",
     "print(f\"Target PDB exists: {os.path.exists(target_pdb)}\")\n",
     "print(f\"(If these are missing, please download from https://github.com/mhoie/bioit-rfantibody before proceeding)\")"
@@ -158,15 +167,18 @@
    "source": [
     "#### [Input parameters](https://biolib.com/BioLibDevelopment/prediction-app/)\n",
     "\n",
+    "Already set above:\n",
     "- **antibody.framework_pdb**: Path to the antibody framework we're using (e.g. hu-4D5-8_Fv.pdb)\n",
     "- **antibody.target_pdb**: Path to the target protein structure (e.g. rsv_site3.pdb)\n",
     "- **ppi.hotspot_res**: List of hotspot residues defining our epitope (target binding site)\n",
+    "\n",
+    "New parameters:\n",
     "- **antibody.design_loops**: Dictionary mapping each CDR loop to a range of allowed loop lengths\n",
     "  - L1, L2, L3: Light chain CDR loops\n",
     "  - H1, H2, H3: Heavy chain CDR loops\n",
     "  - Numbers specify length ranges (e.g., L1:8-13 means loop L1 can be 8-13 residues long)\n",
     "  - Example: `[L1:8-13,L2:7,L3:9-11,H1:7,H2:6,H3:5-13]`\n",
-    "- **inference.num_designs**: Number of designs to generate (20)"
+    "- **inference.num_designs**: Number of designs to generate (20)\n"
    ]
   },
   {
@@ -184,7 +196,6 @@
    ],
    "source": [
     "# Input parameters (antibody framework and target PDBs are set above)\n",
-    "hotspot_res = \"[T305,T456]\"\n",
     "design_loops = \"[L1:8-13,L2:7,L3:9-11,H1:7,H2:6,H3:5-13]\"\n",
     "num_designs = 20\n",
     "\n",
@@ -208,6 +219,8 @@
    "source": [
     "#### RFdiffusion output files\n",
     "The RFdiffusion step generates PDB files containing the antibody framework with designed CDR loops docked to the target protein. At this stage, the CDR loops have backbone structures but no amino acid sequences yet!\n",
+    "\n",
+    "Output files:\n",
     "- example.pdb - Antibody PDB structure, lacking the CDR loop residues (which will be predicted in the next step)\n",
     "\n",
     "You can visualize the job output at the URL printed below, and store output files when the job is completed."
@@ -284,6 +297,8 @@
    "source": [
     "#### ProteinMPNN outputs\n",
     "ProteinMPNN outputs PDB files with the same structures as the input but with amino acid sequences designed for the CDR loops. By default, it provides one sequence per input structure.\n",
+    "\n",
+    "Output files:\n",
     "- example.pdb (antibody structure with predicted CDR residues)\n"
    ]
   },
@@ -364,7 +379,10 @@
    "metadata": {},
    "source": [
     "# RosettaFold2 outputs\n",
-    "RosettaFold2 predicts the structure of the designed antibodies and provides confidence metrics. We can use these to filter for promising designs."
+    "RosettaFold2 predicts the structure of the designed antibodies and provides confidence metrics. We can use these to filter for promising designs.\n",
+    "\n",
+    "Output files:\n",
+    "- example.pdb - Predicted structure"
    ]
   },
   {
