--- a/bioit.ipynb
+++ b/bioit.ipynb
@@ -5,11 +5,14 @@
    "metadata": {},
    "source": [
     "Todo:\n",
-    "- Add Chotia_to_hlt app\n",
-    "- Visualize input files (pre-computed BioLib job URL?)\n",
-    "- Update biolib app URLs\n",
-    "- Update URLs to official BioLib Repository\n",
-    "- Add \"Master\" BioLib app executing all functionality in one app"
+    "- New BioLib app: chotia_to_hlt for choosing own target and antibody framework\n",
+    "- Add all prediction apps, update URLs below\n",
+    "- Ensure prediction apps have clear visualizations\n",
+    "\n",
+    "Nice to have:\n",
+    "- Antibody liability app\n",
+    "- Leaderboard\n",
+    "- \"Master\" BioLib app implementing all functionality in one app (easier to parallelize)"
    ]
   },
   {
