--- a/bioit.ipynb
+++ b/bioit.ipynb
@@ -100,7 +100,7 @@
       "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from requests>=2.26.0->docker>=5.0.3->pybiolib) (3.3.2)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from requests>=2.26.0->docker>=5.0.3->pybiolib) (3.7)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from requests>=2.26.0->docker>=5.0.3->pybiolib) (2024.7.4)\n",
-      "2025-03-17 18:15:58,776 | INFO : Already signed in\n"
+      "2025-03-17 19:50:57,338 | INFO : Already signed in\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -187,14 +187,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-17 18:17:34,315 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n"
+      "2025-03-17 19:50:57,574 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
+      "Job URL: https://biolib.com/results/51d11e46-d1f1-42a5-acc4-16412993af54\n"
      ]
     }
    ],
@@ -214,7 +215,8 @@
     "    \"--ppi.hotspot_res\", f\"{hotspot_res}\",\n",
     "    \"--antibody.design_loops\", f\"{design_loops}\",\n",
     "    \"--inference.num_designs\", f\"{num_designs}\",\n",
-    "], blocking=False)"
+    "], blocking=False)\n",
+    "print(f\"Job URL: https://biolib.com/results/{job_rfdiff.id}\")"
    ]
   },
   {
@@ -232,16 +234,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job URL: https://biolib.com/results/58d16a9b-8562-408c-9545-dee80c8bdaff\n",
-      "2025-03-17 18:17:53,519 | INFO : Saving 1 files to output/rfdiffusion...\n",
-      "Generated 0 PDB files\n"
+      "Job URL: https://biolib.com/results/51d11e46-d1f1-42a5-acc4-16412993af54\n",
+      "Job status is not completed (in_progress), please wait a moment (or try again if failed)\n"
      ]
     }
    ],
@@ -270,14 +271,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-17 18:18:27,267 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n"
+      "2025-03-17 19:51:00,390 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
+      "Job URL: https://biolib.com/results/4a222cd1-b807-47c7-a8c1-02bd165fe1c6\n"
      ]
     }
    ],
@@ -293,7 +295,8 @@
     "job_mpnn = app_mpnn.cli(args=[\n",
     "    \"-pdbdir\", f\"{input_dir}\",\n",
     "    \"-num_seq_per_target\", \"1\"\n",
-    "], blocking=False)"
+    "], blocking=False)\n",
+    "print(f\"Job URL: https://biolib.com/results/{job_mpnn.id}\")"
    ]
   },
   {
@@ -309,16 +312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job URL: https://biolib.com/results/717cfc8f-e18f-4a58-bb70-e4f68a2103d0\n",
-      "2025-03-17 18:18:38,722 | INFO : Saving 1 files to output/proteinmpnn...\n",
-      "Generated 0 PDB files\n"
+      "Job URL: https://biolib.com/results/4a222cd1-b807-47c7-a8c1-02bd165fe1c6\n",
+      "Job status is not completed (in_progress), please wait a moment (or try again if failed)\n"
      ]
     }
    ],
@@ -354,14 +356,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-17 18:19:29,310 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n"
+      "2025-03-17 19:51:04,033 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
+      "Job URL: https://biolib.com/results/d38a3a48-aed4-478e-b8e7-5f0e9dd29dc0\n"
      ]
     }
    ],
@@ -378,7 +381,8 @@
     "    \"input.pdb_dir\", f\"{input_dir}\",\n",
     "    \"num_recycles\", \"10\",\n",
     "    \"hotspot\", \"0.1\"\n",
-    "], blocking=False)"
+    "], blocking=False)\n",
+    "print(f\"Job URL: https://biolib.com/results/{job_rf2.id}\")"
    ]
   },
   {
@@ -394,16 +398,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job URL: https://biolib.com/results/24e7ad8e-7a24-41e9-8a81-5308517bdf56\n",
-      "2025-03-17 18:19:46,309 | INFO : Saving 1 files to output/rosettfold2...\n",
-      "Generated 0 PDB files\n"
+      "Job URL: https://biolib.com/results/d38a3a48-aed4-478e-b8e7-5f0e9dd29dc0\n",
+      "Job status is not completed (in_progress), please wait a moment (or try again if failed)\n"
      ]
     }
    ],
