example input, cleanup input components

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -5,11 +5,14 @@
    "metadata": {},
    "source": [
     "Todo:\n",
-    "- New BioLib app: chotia_to_hlt for choosing own target and antibody framework\n",
     "- Add all prediction apps, update URLs below\n",
     "- Ensure prediction apps have clear visualizations\n",
+    "- Double check input/output files and example output format are correct!\n",
+    "- AntibodyProfiler: Accept HLT format PDB files, antigen chain\n",
+    "- Stress-test servers, spin up capacity before workshop\n",
     "\n",
     "Nice to have:\n",
+    "- New BioLib app: chotia_to_hlt for choosing own target and antibody framework\n",
     "- Antibody liability app\n",
     "- Leaderboard\n",
     "- \"Master\" BioLib app implementing all functionality in one app (easier to parallelize)"
@@ -64,8 +67,8 @@
     "## Pre-requisites for this workshop\n",
     "\n",
     "The only pre-requisites for this workshop are the following:\n",
-    "- i) A BioLib account (biolib.com) for running RFantibody jobs (requires a GPU) in the cloud.\n",
-    "- ii) An antibody PDB and target protein structure PDB. You may use your own, or our examples provided in step 1 below."
+    "- i) Register a BioLib account on [https://biolib.com/sign-up](https://biolib.com/sign-up), for running RFantibody jobs (requires a GPU) in the cloud.\n",
+    "- ii) An antibody PDB and target protein structure PDB. Examples are provided below, but you may also provide your own following the instructions below."
    ]
   },
   {
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,6 +88,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pybiolib in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (1.2.567)\n",
+      "Collecting pybiolib\n",
+      "  Downloading pybiolib-1.2.582-py3-none-any.whl.metadata (1.6 kB)\n",
       "Requirement already satisfied: appdirs>=1.4.3 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from pybiolib) (1.4.4)\n",
       "Requirement already satisfied: click>=8.0.0 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from pybiolib) (8.1.7)\n",
       "Requirement already satisfied: docker>=5.0.3 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from pybiolib) (7.1.0)\n",
@@ -100,7 +105,15 @@
       "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from requests>=2.26.0->docker>=5.0.3->pybiolib) (3.3.2)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from requests>=2.26.0->docker>=5.0.3->pybiolib) (3.7)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from requests>=2.26.0->docker>=5.0.3->pybiolib) (2024.7.4)\n",
-      "2025-03-17 19:50:57,338 | INFO : Already signed in\n"
+      "Downloading pybiolib-1.2.582-py3-none-any.whl (155 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m155.4/155.4 kB\u001b[0m \u001b[31m9.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: pybiolib\n",
+      "  Attempting uninstall: pybiolib\n",
+      "    Found existing installation: pybiolib 1.2.567\n",
+      "    Uninstalling pybiolib-1.2.567:\n",
+      "      Successfully uninstalled pybiolib-1.2.567\n",
+      "Successfully installed pybiolib-1.2.582\n",
+      "2025-03-21 11:44:58,008 | INFO : Already signed in\n"
      ]
     }
    ],
@@ -118,9 +131,9 @@
    "metadata": {},
    "source": [
     "#### ii) Set input antibody and target PDB\n",
-    "First, let's set up our environment and input files. We're working with two primary input files:\n",
+    "We're working with two primary input files for RFAntibody:\n",
     "\n",
-    "1. **framework_pdb**: `hu-4D5-8_Fv.pdb` - Our humanized single domain antibody (VHH) framework\n",
+    "1. **framework_pdb**: `hu-4D5-8_Fv.pdb` - A humanized single domain antibody (VHH) framework\n",
     "2. **target_pdb**: `rsv_site3.pdb` - The target protein (RSV site 3) of interest\n",
     "3. List of hotspot residues defining our epitope (target binding site)\n",
     "\n",
@@ -132,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -187,15 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-17 19:50:57,574 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
-      "Job URL: https://biolib.com/results/51d11e46-d1f1-42a5-acc4-16412993af54\n"
+      "2025-03-21 11:49:16,957 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
+      "2025-03-21 11:49:20,138 | INFO : View the result in your browser at: https://biolib.com/results/5692802d-6e4f-4e57-aa2a-6083d1f0beda/\n"
      ]
     }
    ],
@@ -209,51 +222,60 @@
     "\n",
     "# Run RFdiffusion through BioLib\n",
     "app_rfdiff = biolib.load('BioLibDevelopment/prediction-app')  # Replace with actual RFantibody app ID\n",
-    "job_rfdiff = app_rfdiff.cli(args=[\n",
-    "    \"--antibody.framework_pdb\", f\"{framework_pdb}\",\n",
-    "    \"--antibody.target_pdb\", f\"{target_pdb}\",\n",
-    "    \"--ppi.hotspot_res\", f\"{hotspot_res}\",\n",
-    "    \"--antibody.design_loops\", f\"{design_loops}\",\n",
-    "    \"--inference.num_designs\", f\"{num_designs}\",\n",
-    "], blocking=False)\n",
-    "print(f\"Job URL: https://biolib.com/results/{job_rfdiff.id}\")"
+    "job_rfdiff = app_rfdiff.start(\n",
+    "    antibody=framework_pdb,\n",
+    "    framework_pdb=framework_pdb,\n",
+    "    target_pdb=target_pdb,\n",
+    "    hotspot_res=hotspot_res,\n",
+    "    design_loops=design_loops,\n",
+    "    num_designs=num_designs,\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### RFdiffusion output files (takes ~2-3 minutes)\n",
+    "#### Wait for RFdiffusion output files (~2-3 minutes)\n",
     "The RFdiffusion step generates PDB files containing the antibody framework with designed CDR loops docked to the target protein. At this stage, the CDR loops have backbone structures but no amino acid sequences yet!\n",
     "\n",
     "Output files:\n",
-    "- example.pdb - Antibody PDB structure, lacking the CDR loop residues (which will be predicted in the next step)\n",
+    "- ab_rfdiffusion_output.pdb - Antibody PDB backbone (N, Ca, C, O atoms only), lacking the CDR loop residues (which will be predicted in the next step)\n",
     "\n",
-    "You can visualize the job output at the URL printed below, and store output files when the job is completed."
+    "Example output format:\n",
+    "```pdb\n",
+    "ATOM      1  N   GLU H   1      23.793  -8.718 -21.757  1.00  1.00\n",
+    "\n",
+    "ATOM      2  CA  GLU H   1      23.755  -8.421 -20.330  1.00  1.00\n",
+    "\n",
+    "ATOM      3  C   GLU H   1      23.563  -6.931 -20.082  1.00  1.00\n",
+    "\n",
+    "ATOM      4  O   GLU H   1      23.856  -6.105 -20.947  1.00  1.00\n",
+    "\n",
+    "ATOM      5  N   VAL H   2      22.855  -6.630 -18.891  1.00  1.00\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job URL: https://biolib.com/results/51d11e46-d1f1-42a5-acc4-16412993af54\n",
-      "Job status is not completed (in_progress), please wait a moment (or try again if failed)\n"
+      "2025-03-21 11:50:29,247 | INFO : Saving 1 files to output/rfdiffusion...\n"
      ]
     }
    ],
    "source": [
     "# Try to save job output files\n",
-    "print(f\"Job URL: https://biolib.com/results/{job_rfdiff.id}\")\n",
-    "if job_rfdiff.get_status() == \"completed\":\n",
+    "status = job_rfdiff.get_status()\n",
+    "if status == \"completed\":\n",
     "    job_rfdiff.save_files(outdir_rfdiff)\n",
-    "    print(f\"Generated {len([f for f in os.listdir(outdir_rfdiff) if f.endswith('.pdb')])} PDB files\")\n",
     "else:\n",
-    "    print(f\"Job status is not completed ({job_rfdiff.get_status()}), please wait a moment (or try again if failed)\")"
+    "    print(f\"Job status is not completed ({status}), please wait a moment (or try again if failed)\")"
    ]
   },
   {
@@ -266,20 +288,20 @@
     "The second step takes the docks generated by RFdiffusion and assigns amino acid sequences to the CDR loops using ProteinMPNN. We use the base version of ProteinMPNN (not an antibody-finetuned model) with a wrapper script that focuses on designing just the CDR loops.\n",
     "\n",
     "#### [Input parameters](https://biolib.com/BioLibDevelopment/prediction-app/)\n",
-    "- **pdbdir**: Directory containing the input PDB files from RFdiffusion\n"
+    "- **pdbdir**: Directory containing the previous RFdiffusion output PDB files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-17 19:51:00,390 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
-      "Job URL: https://biolib.com/results/4a222cd1-b807-47c7-a8c1-02bd165fe1c6\n"
+      "2025-03-21 13:13:03,324 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
+      "2025-03-21 13:13:05,886 | INFO : View the result in your browser at: https://biolib.com/results/0180dceb-5e54-498c-9103-10f3e71f0e15/\n"
      ]
     }
    ],
@@ -292,46 +314,53 @@
     "\n",
     "# Run ProteinMPNN\n",
     "app_mpnn = biolib.load('BioLibDevelopment/prediction-app')  # Replace with actual app ID\n",
-    "job_mpnn = app_mpnn.cli(args=[\n",
-    "    \"-pdbdir\", f\"{input_dir}\",\n",
-    "    \"-num_seq_per_target\", \"1\"\n",
-    "], blocking=False)\n",
-    "print(f\"Job URL: https://biolib.com/results/{job_mpnn.id}\")"
+    "job_mpnn = app_mpnn.start(\n",
+    "    pdb_dir=input_dir,\n",
+    "    num_seq_per_target=1\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ProteinMPNN output files (takes <1 minute)\n",
+    "#### Wait for ProteinMPNN output files (<1 minute)\n",
     "ProteinMPNN outputs PDB files with the same structures as the input but with amino acid sequences designed for the CDR loops. By default, it provides one sequence per input structure.\n",
     "\n",
     "Output files:\n",
-    "- example.pdb (antibody structure with predicted CDR residues)\n"
+    "- example.pdb (antibody structure with predicted CDR residues)\n",
+    "\n",
+    "Example output:\n",
+    "```pdb\n",
+    "ATOM      1  N   GLU H   1      23.793  -8.718 -21.757  1.00  0.00\n",
+    "ATOM      2  CA  GLU H   1      23.755  -8.421 -20.330  1.00  0.00\n",
+    "ATOM      3  C   GLU H   1      23.563  -6.931 -20.082  1.00  0.00\n",
+    "ATOM      4  O   GLU H   1      23.856  -6.105 -20.947  1.00  0.00\n",
+    "ATOM      5  N   VAL H   2      22.855  -6.630 -18.891  1.00  0.00\n",
+    "ATOM      6  CA  VAL H   2      22.864  -5.216 -18.533  1.00  0.00\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job URL: https://biolib.com/results/4a222cd1-b807-47c7-a8c1-02bd165fe1c6\n",
-      "Job status is not completed (in_progress), please wait a moment (or try again if failed)\n"
+      "2025-03-21 11:55:01,619 | INFO : Saving 1 files to output/proteinmpnn...\n"
      ]
     }
    ],
    "source": [
     "# Try to save job output files\n",
-    "print(f\"Job URL: https://biolib.com/results/{job_mpnn.id}\")\n",
-    "if job_mpnn.get_status() == \"completed\":\n",
+    "status = job_mpnn.get_status()\n",
+    "if status == \"completed\":\n",
     "    job_mpnn.save_files(outdir_mpnn)\n",
-    "    print(f\"Generated {len([f for f in os.listdir(outdir_mpnn) if f.endswith('.pdb')])} PDB files\")\n",
     "else:\n",
-    "    print(f\"Job status is not completed ({job_mpnn.get_status()}), please wait a moment (or try again if failed)\")"
+    "    print(f\"Job status is not completed ({status}), please wait a moment (or try again if failed)\")"
    ]
   },
   {
@@ -356,15 +385,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-17 19:51:04,033 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
-      "Job URL: https://biolib.com/results/d38a3a48-aed4-478e-b8e7-5f0e9dd29dc0\n"
+      "2025-03-21 11:56:22,664 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
+      "2025-03-21 11:56:23,667 | INFO : View the result in your browser at: https://biolib.com/results/bffaec6d-db39-4fe4-b482-abd65dcc3bd9/\n"
      ]
     }
    ],
@@ -377,47 +406,107 @@
     "\n",
     "# Run RosettaFold2\n",
     "app_rf2 = biolib.load('BioLibDevelopment/prediction-app')  # Replace with actual app ID\n",
-    "job_rf2 = app_rf2.cli(args=[\n",
-    "    \"input.pdb_dir\", f\"{input_dir}\",\n",
-    "    \"num_recycles\", \"10\",\n",
-    "    \"hotspot\", \"0.1\"\n",
-    "], blocking=False)\n",
-    "print(f\"Job URL: https://biolib.com/results/{job_rf2.id}\")"
+    "job_rf2 = app_rf2.start(\n",
+    "    pdb_dir=input_dir,\n",
+    "    num_recyles=10,\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### RosettaFold2 output files (takes ~1-2 minutes)\n",
+    "#### Wait for RosettaFold2 output files (1-2 minutes)\n",
     "RosettaFold2 predicts the structure of the designed antibodies and provides confidence metrics. We can use these to filter for promising designs.\n",
     "\n",
     "Output files:\n",
-    "- example.pdb - Predicted structure"
+    "- example.pdb - Predicted structure\n",
+    "\n",
+    "Example output:\n",
+    "```\n",
+    "PLACEHOLDER\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Job URL: https://biolib.com/results/d38a3a48-aed4-478e-b8e7-5f0e9dd29dc0\n",
-      "Job status is not completed (in_progress), please wait a moment (or try again if failed)\n"
+      "2025-03-21 11:56:51,505 | INFO : Saving 1 files to output/rosettfold2...\n"
      ]
     }
    ],
    "source": [
     "# Try to save job output files\n",
-    "print(f\"Job URL: https://biolib.com/results/{job_rf2.id}\")\n",
-    "if job_rf2.get_status() == \"completed\":\n",
+    "status = job_rf2.get_status()\n",
+    "if status == \"completed\":\n",
     "    job_rf2.save_files(outdir_rf2)\n",
-    "    print(f\"Generated {len([f for f in os.listdir(outdir_rf2) if f.endswith('.pdb')])} PDB files\")\n",
     "else:\n",
-    "    print(f\"Job status is not completed ({job_rf2.get_status()}), please wait a moment (or try again if failed)\")"
+    "    print(f\"Job status is not completed ({status}), please wait a moment (or try again if failed)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4/4: Assess designs for pharmaceutical liabilities (AntibodyProfiler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input directory\n",
+    "input_dir = outdir_rf2  # Using the output from RosettaFold2\n",
+    "\n",
+    "# Output directory\n",
+    "outdir_abprofiler = \"output/rosettfold2\"\n",
+    "\n",
+    "# Run RosettaFold2\n",
+    "app_abprofiler = biolib.load('BioLibDevelopment/prediction-app')  # Replace with actual app ID\n",
+    "job_abprofiler = app_abprofiler.start(\n",
+    "    pdb_dir=input_dir,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Wait for AntibodyProfiler output files (<1 minute)\n",
+    "AntibodyProfiler calculates developability metrics compared to approved therapeutic antibodies already on the market, giving warning flags for input PDBs outside this range.\n",
+    "\n",
+    "Output file:\n",
+    "- metrics.csv (Summary metrics compared to therapeutically approved antibodies for each PDB)\n",
+    "\n",
+    "Example output:\n",
+    "```csv\n",
+    "pdb,\t        metric,             value, recommended_range,\tstatus,\n",
+    "example,\tcdrh3_length,\t    7,\t    6-23,\t        good,\n",
+    "example,\tpsh,\t            100.74, 35-150,             good,\n",
+    "example,\ttotal_cdr_length,   41,\t    37-60,              good,\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try to save job output files\n",
+    "status = job_abprofiler.get_status()\n",
+    "if status == \"completed\":\n",
+    "    job_abprofiler.save_files(outdir_rf2)\n",
+    "else:\n",
+    "    print(f\"Job status is not completed ({status}), please wait a moment (or try again if failed)\")"
    ]
   },
   {
