--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -23,7 +23,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## De novo generation of antibody binders with RFantibody"
+    "## De novo generation of antibody binders with RFantibody\n",
+    "[![colab.ipynb](https://img.shields.io/badge/github-%23121011.svg?logo=github)](https://github.com/mhoie/workshop/blob/main/workshop.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/mhoie/workshop/blob/main/workshop.ipynb)"
    ]
   },
   {
@@ -81,48 +83,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download BioLib\n",
+    "!pip install --quiet --upgrade pybiolib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pybiolib in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (1.2.567)\n",
-      "Collecting pybiolib\n",
-      "  Downloading pybiolib-1.2.582-py3-none-any.whl.metadata (1.6 kB)\n",
-      "Requirement already satisfied: appdirs>=1.4.3 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from pybiolib) (1.4.4)\n",
-      "Requirement already satisfied: click>=8.0.0 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from pybiolib) (8.1.7)\n",
-      "Requirement already satisfied: docker>=5.0.3 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from pybiolib) (7.1.0)\n",
-      "Requirement already satisfied: importlib-metadata>=1.6.1 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from pybiolib) (8.1.0)\n",
-      "Requirement already satisfied: pyyaml>=5.3.1 in /Users/mhoie/.local/lib/python3.12/site-packages (from pybiolib) (6.0.1)\n",
-      "Requirement already satisfied: rich>=12.4.4 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from pybiolib) (13.7.1)\n",
-      "Requirement already satisfied: requests>=2.26.0 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from docker>=5.0.3->pybiolib) (2.32.3)\n",
-      "Requirement already satisfied: urllib3>=1.26.0 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from docker>=5.0.3->pybiolib) (2.2.2)\n",
-      "Requirement already satisfied: zipp>=0.5 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from importlib-metadata>=1.6.1->pybiolib) (3.19.2)\n",
-      "Requirement already satisfied: markdown-it-py>=2.2.0 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from rich>=12.4.4->pybiolib) (3.0.0)\n",
-      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from rich>=12.4.4->pybiolib) (2.18.0)\n",
-      "Requirement already satisfied: mdurl~=0.1 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from markdown-it-py>=2.2.0->rich>=12.4.4->pybiolib) (0.1.2)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from requests>=2.26.0->docker>=5.0.3->pybiolib) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from requests>=2.26.0->docker>=5.0.3->pybiolib) (3.7)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/mhoie/miniforge3/envs/py310/lib/python3.12/site-packages (from requests>=2.26.0->docker>=5.0.3->pybiolib) (2024.7.4)\n",
-      "Downloading pybiolib-1.2.582-py3-none-any.whl (155 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m155.4/155.4 kB\u001b[0m \u001b[31m9.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: pybiolib\n",
-      "  Attempting uninstall: pybiolib\n",
-      "    Found existing installation: pybiolib 1.2.567\n",
-      "    Uninstalling pybiolib-1.2.567:\n",
-      "      Successfully uninstalled pybiolib-1.2.567\n",
-      "Successfully installed pybiolib-1.2.582\n",
-      "2025-03-21 11:44:58,008 | INFO : Already signed in\n"
+      "2025-03-21 13:56:29,213 | INFO : Already signed in\n"
      ]
     }
    ],
    "source": [
-    "# Download BioLib\n",
-    "!pip install --upgrade pybiolib\n",
-    "\n",
-    "# Login with Biolib\n",
+    "# Login with BioLib\n",
     "import biolib\n",
     "biolib.login()"
    ]
@@ -146,15 +129,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Framework PDB exists: False\n",
-      "Target PDB exists: False\n",
+      "2025-03-21 14:08:02 URL:https://raw.githubusercontent.com/mhoie/workshop/refs/heads/main/example_input/hu-4D5-8_Fv.pdb [131172/131172] -> \"hu-4D5-8_Fv.pdb\" [1]\n",
+      "2025-03-21 14:08:03 URL:https://raw.githubusercontent.com/mhoie/workshop/refs/heads/main/example_input/rsv_site3.pdb [461944/461944] -> \"rsv_site3.pdb\" [1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Download input files if not already present\n",
+    "!wget --no-verbose -nc \"https://raw.githubusercontent.com/mhoie/workshop/refs/heads/main/example_input/hu-4D5-8_Fv.pdb\"\n",
+    "!wget --no-verbose -nc \"https://raw.githubusercontent.com/mhoie/workshop/refs/heads/main/example_input/rsv_site3.pdb\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Framework PDB exists: True\n",
+      "Target PDB exists: True\n",
       "(If these are missing, please download from https://github.com/mhoie/bioit-rfantibody before proceeding)\n"
      ]
     }
@@ -201,15 +204,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-21 11:49:16,957 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
-      "2025-03-21 11:49:20,138 | INFO : View the result in your browser at: https://biolib.com/results/5692802d-6e4f-4e57-aa2a-6083d1f0beda/\n"
+      "2025-03-21 14:06:56,559 | INFO : Loaded project BioLibDevelopment/prediction-app:0.0.39\n",
+      "2025-03-21 14:06:59,526 | INFO : View the result in your browser at: https://biolib.com/results/967f4db5-fdf4-49bb-bcd2-e155e08bcd0f/\n"
      ]
     }
    ],
@@ -259,14 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-03-21 11:50:29,247 | INFO : Saving 1 files to output/rfdiffusion...\n"
+      "Job status is not completed (in_progress), please wait a moment (or try again if failed)\n"
      ]
     }
    ],
